# powerdream

./: .gitmodules  CMakeLists.txt  README.md  toolchain.cmake
.theia/: settings.json
data/: ip.txt
kernel/: CMakeLists.txt  README.md  toolchain.cmake
kernel/data/: config.h.in  kernel.ld
kernel/doc/: booting.md
kernel/fs/: CMakeLists.txt  devfs.c  initrd.c
kernel/fs/include/: kernel
kernel/fs/include/fs/: fs.h  vfs.h
kernel/fs/src/: devfs.c  fs.c
kernel/include/: fs  string.h
kernel/include/kernel/: blkdev.h  cache.h  device.h  error.h  file.h  fs.h  inode.h  io.h  irq.h  klog.h  limits.h  list.h  mem.h  mmu.h  module.h  process.h  sem.h  sercon.h  signal.h  syscall.h  system.h  types.h
kernel/include/kernel/dev/: block.h  char.h  tty.h
kernel/include/kernel/fs/: devfs.h  procfs.h
kernel/src/: blkdev.c  boot.c  device.c  fs.c  inode.c  irq.c  klog.c  mem.c  mmu.c  module.c  process.c  sem.c  sercon.c  string.c  syscall.c  system.c
kernel/src/asm/: cache.s  entry.s  irq.s  mmu.s
kernel/src/dev/: blkdev.c  block.c  char.c  tty.c
kernel/src/fs/: devfs.c  procfs.c
libc/: CMakeLists.txt  README.md  toolchain.cmake
libc/include/: errno.h  string.h
libc/include/sys/: syscall.h  types.h
libc/src/: string.c
libc/src/sys/: syscall.c
toolchain/: CMakeLists.txt  environ.sh.in
